Fixed a few bugs, especially with the alarms, it should at least crash less now.